# yellowbot

./: README.md
yellowbot_bringup/: package.xml  setup.cfg  setup.py
yellowbot_description/: package.xml  setup.cfg  setup.py
yellowbot_description/meshes/: base_link.stl  led_left_1.stl  led_left_2.stl  motor_1.stl  motor_2.stl  motor_3.stl  motor_4.stl  motor_coupling_1.stl  motor_coupling_2.stl  motor_coupling_3.stl  motor_coupling_4.stl  top_plate_1.stl  wheel_1.stl  wheel_2.stl  wheel_3.stl  wheel_4.stl
yellowbot_description/urdf/: Assembly.gazebo  Assembly.trans  materials.xacro  yellowbot.urdf  yellowbot.xacro
yellowbot_gazebo/: package.xml  setup.cfg  setup.py
