<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yellowbot_description</name>
  <version>0.1.0</version>
  <description>The YellowBot robot description package contains all meshes and the urdf/xacro files necessary to visualize the robot.</description>
  <maintainer email="rgruberski@gmail.com">robert</maintainer>
  <license>Apache License 2.0</license>

  <depend>xacro</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
